@@ -1,5 +1,7 @@
 package com.d2fn.sumi.computer;
 
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 public class DoubleConstant extends Computer {
@@ -12,12 +14,12 @@ public class DoubleConstant extends Computer {
 
     @Override
     public List<String> getInputNames() {
-        return List.of("time");
+        return Collections.singletonList("time");
     }
 
     @Override
     public List<String> getOutputNames() {
-        return List.of("value");
+        return Collections.singletonList("value");
     }
 
     @Override
