@@ -1,13 +1,14 @@
 package com.d2fn.sumi.computer;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.atomic.AtomicLong;
 
 public class Environment extends Computer {
 
-    private static final List<String> inputNames = List.of("time");
-    private static final List<String> outputNames = List.of("time");
+    private static final List<String> inputNames = Collections.singletonList("time");
+    private static final List<String> outputNames = Collections.singletonList("time");
 
     private final AtomicLong clock = new AtomicLong(0L);
 
