@@ -1,5 +1,6 @@
 package com.d2fn.sumi.computer;
 
+import java.util.Collections;
 import java.util.List;
 
 public class StringConstant extends Computer {
@@ -12,12 +13,12 @@ public class StringConstant extends Computer {
 
     @Override
     public List<String> getInputNames() {
-        return List.of("time");
+        return Collections.singletonList("time");
     }
 
     @Override
     public List<String> getOutputNames() {
-        return List.of("value");
+        return Collections.singletonList("value");
     }
 
     @Override
